--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
             {name: "Mike Byron", title: "Independent Board Member", company: "Aeluma", education: "B.A Business Economics at UCSB '87"},
             {name: "Robert Kahn", title: "CEO & Chief Investment Officer", company: "Alpha Next", education: "MBA at Cornell University, B.A. at UCSB"},
             {name: "Mitchell Kauffman", title: "Managing Director", company: "Kauffman Wealth Management", education: "MBA at Claremont Graduate University, B.A. Business Economics and B.S. Political Science at UCSB'77"},
-            {name: "Erin Lubitz", title: "Senior Associate", company: "Milken Institute", education: "B.A. Political Science and Communication at UCSB '18"},
+            {name: "Erin Lubitz", title: "Director and Head of Asset Owner Programming", company: "Milken Institute", education: "B.A. Political Science and Communication at UCSB '18"},
             {name: "Allie Pederson", title: "Senior Vice President", company: "Silicon Valley Bank", education: "MBA Candidate at Columbia Business School, B.A. Economics and Global Studies '15"},
             {name: "Rod Scherba", title: "Executive Managing Director", company: "Cornish & Carey Commercial Newmark Knight Frank", education: "B.A. Business Economics at UCSB '79"},
             {name: "George Tharakan", title: "Co-Founder and Chief Investment Officer", company: "Alamar Capital", education: "MBA at UCLA '97, M.S. Computer Engineering at University of Illinois '92"},
