--- a/index.html
+++ b/index.html
@@ -965,6 +965,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#performance">Performance</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="portfolio-analysis.html">Analysis</a></li>
                 <li><a href="#impact">Impact</a></li>
                 <li><a href="#board">Advisory Board</a></li>
             </ul>
