--- a/live-portfolio.html
+++ b/live-portfolio.html
@@ -823,7 +823,7 @@
                 <li><a href="index.html#home">Home</a></li>
                 <li><a href="index.html#board">Advisory Board</a></li>
                 <li><a href="live-portfolio.html" class="live-portfolio-link">📊 Live Portfolio</a></li>
-                <li><a href="TrackingError/tracking_error_analyzer.html">📈 Tracking Error</a></li>
+                <li><a href="tracking-error.html">📈 Tracking Error</a></li>
             </ul>
             <div class="mobile-menu-toggle" id="mobileMenuToggle">
                 <span></span>
