--- a/tracking-error.html
+++ b/tracking-error.html
@@ -239,7 +239,7 @@
                 <li><a href="index.html#home">Home</a></li>
                 <li><a href="index.html#board">Advisory Board</a></li>
                 <li><a href="live-portfolio.html">📊 Live Portfolio</a></li>
-                <li><a href="TrackingError/tracking_error_analyzer.html">📈 Tracking Error</a></li>
+                <li><a href="tracking-error.html">📈 Tracking Error</a></li>
             </ul>
         </nav>
     </header>
