Integrate Tracking Error tool into site

--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#board">Advisory Board</a></li>
                 <li><a href="live-portfolio.html" class="live-portfolio-link">📊 Live Portfolio</a></li>
-                <li><a href="tracking-error.html">📈 Tracking Error</a></li>
+                <li><a href="TrackingError/tracking_error_analyzer.html">📈 Tracking Error</a></li>
             </ul>
             <div class="mobile-menu-toggle" id="mobileMenuToggle">
                 <span></span>
