--- a/TrackingError/tracking_error_analyzer.html
+++ b/TrackingError/tracking_error_analyzer.html
@@ -2203,15 +2203,10 @@
             const failedTickers = [];
 
             console.log(`Fetching ${tickers.length} tickers via proxy server...`);
-            console.log(`This will take approximately ${Math.ceil(tickers.length / 5)} minutes on free tier (5 calls/minute)`);
 
-            // Free tier: 5 calls per minute = 12 second delay between requests
-            const DELAY_MS = 12000;
-
-            // Fetch tickers sequentially with client-side rate limiting
-            for (let i = 0; i < tickers.length; i++) {
-                const ticker = tickers[i];
-
+            // Paid tier: No client-side delays needed (proxy handles rate limiting)
+            // Use Promise.all for parallel requests to maximize speed
+            const fetchPromises = tickers.map(async (ticker, i) => {
                 try {
                     console.log(`[${i + 1}/${tickers.length}] Fetching ${ticker}...`);
 
@@ -2241,13 +2236,10 @@
                     console.error(`Failed to fetch ${ticker}: ${error.message}`);
                     failedTickers.push(ticker);
                 }
+            });
 
-                // Rate limiting: wait 12 seconds between calls (except after last ticker)
-                if (i < tickers.length - 1) {
-                    console.log(`Waiting 12 seconds before next request...`);
-                    await new Promise(resolve => setTimeout(resolve, DELAY_MS));
-                }
-            }
+            // Wait for all requests to complete
+            await Promise.all(fetchPromises);
 
             if (failedTickers.length > 0) {
                 console.warn(`Failed to fetch ${failedTickers.length} tickers:`, failedTickers.slice(0, 10).join(', '), failedTickers.length > 10 ? '...' : '');
