--- a/portfolio.html
+++ b/portfolio.html
@@ -708,6 +708,9 @@
                     <div class="time-selector">
                         <button class="time-btn active" onclick="changeSectorGrouping('gics11')">11 Sectors</button>
                         <button class="time-btn" onclick="changeSectorGrouping('custom6')">6 Sectors</button>
+                        <button class="time-btn" onclick="resetSectorView()" id="resetSectorBtn" style="display: none;">
+                            <i class="fas fa-undo"></i> Reset
+                        </button>
                     </div>
                 </div>
                 <div class="chart-container">
@@ -730,10 +733,12 @@
                             <th onclick="sortTable(2)">Sector <i class="fas fa-sort"></i></th>
                             <th onclick="sortTable(3)">Quantity <i class="fas fa-sort"></i></th>
                             <th onclick="sortTable(4)">Price <i class="fas fa-sort"></i></th>
-                            <th onclick="sortTable(5)">Value <i class="fas fa-sort"></i></th>
-                            <th onclick="sortTable(6)">Weight % <i class="fas fa-sort"></i></th>
-                            <th onclick="sortTable(7)">Day Change <i class="fas fa-sort"></i></th>
-                            <th onclick="sortTable(8)">Total Return <i class="fas fa-sort"></i></th>
+                            <th onclick="sortTable(5)">Avg Cost <i class="fas fa-sort"></i></th>
+                            <th onclick="sortTable(6)">Cost Basis <i class="fas fa-sort"></i></th>
+                            <th onclick="sortTable(7)">Value <i class="fas fa-sort"></i></th>
+                            <th onclick="sortTable(8)">Weight % <i class="fas fa-sort"></i></th>
+                            <th onclick="sortTable(9)">Day Change <i class="fas fa-sort"></i></th>
+                            <th onclick="sortTable(10)">Total Return <i class="fas fa-sort"></i></th>
                         </tr>
                     </thead>
                     <tbody id="holdingsTableBody">
